--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biglietto Treno</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="container">
 
-    <div ckass="prezzo">
+    <div class="prezzo">
         <h2>Il prezzo del tuo Biglietto è:</h2>
         <h3>Standard:<span id="prezzo-tratta"></span> </h3>
 
@@ -16,6 +17,7 @@
 
         <h3>Over 65:<span id="prezzo-tratta-o65"></span> </h3>
     </div>
+    
     <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
