--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
 
     <div class="prezzo">
         <h2>Il prezzo del tuo Biglietto è:</h2>
-        <h3>Standard:<span id="prezzo-tratta"></span> </h3>
+        <h3>Prezzo:<span id="prezzo-tratta"></span> </h3>
 
-        <h3>Minorenni:<span id="prezzo-tratta-u18"></span> </h3>
-
-        <h3>Over 65:<span id="prezzo-tratta-o65"></span> </h3>
     </div>
     
     <script src="js/script.js" type="text/javascript"></script>
